# sparse-gp-petsc

./: CMakeLists.txt  LICENSE
data/: labels.txt  obs.txt  testLabels.txt  testObs.txt  x_1000  x_10000  x_100000  yTrue_100  yTrue_1000  yTrue_10000  yTrue_100000  y_100  y_1000  y_10000  y_100000
job/: run-large.job  run-small.job
report/: abstract.tex  perl_SIunits.sty  perl_acronyms.sty  perl_math.sty  perl_misc.sty  references.bib  report.tex
report/chap.conclusion/: main.tex
report/chap.conclusion/auto/: main.el
report/chap.experiments/: main.tex
report/chap.experiments/auto/: main.el
report/chap.gp-overview/: main.tex
report/chap.gp-overview/auto/: main.el
report/chap.implementation/: main.tex
report/chap.implementation/auto/: main.el
report/chap.intro/: main.tex
report/chap.restatement/: main.tex
report/chap.restatement/auto/: main.el
report/figures/: resultsK.py  resultsse.py
src/: CMakeLists.txt
src/petsc-examples/: CMakeLists.txt  hello-world.c  ksp-ex1.c  ksp-ex23.c
src/sparsegp/: CMakeLists.txt  gsl_util_blas.h  gsl_util_matrix.c  gsl_util_matrix.h  gsl_util_vector.c  gsl_util_vector.h  io_util.c  io_util.h  petsc_util.c  petsc_util.h  sparsegp.c  sparsegp.h  sparsekernels.c  sparsekernels.h
src/sparsegp-main/: CMakeLists.txt  main.c
